--- a/css/main.scss
+++ b/css/main.scss
@@ -3,13 +3,14 @@
 
 //////////////////////////////////////// VARIABLES ////////////////////////////////////////
 :root {
-  --red: #ff4d5a;
+  --red: #e44e58;
   --dark-red: #e43956c4;
   --blue: #0077b5;
   --gray: rgb(170, 170, 170);
   --dark-gray: #181a1b;
   --dark-blue: #002333;
   --text-color: #fff;
+  --lighter-text: rgb(219, 219, 219);
   --card-background: #2e3031;
   --skills-span: rgb(200, 200, 200);
 }
@@ -18,6 +19,7 @@
   --gray: rgb(107, 107, 107);
   --dark-gray: white;
   --text-color: #000;
+  --lighter-text: rgb(37, 37, 37);
   --card-background: #eeeeee;
   --skills-span: rgb(61, 61, 61);
 }
@@ -61,7 +63,7 @@ header {
     min-height: 6vh;
     animation: nav-links 0.5s;
     .logo {
-      color: #fff;
+      color: var(--text-color);
       font-size: 1.4rem;
       text-transform: uppercase;
       letter-spacing: 5px;
@@ -81,7 +83,7 @@ header {
         list-style: none;
       }
       a {
-        color: #fff;
+        color: var(--text-color);
         text-decoration: none;
         letter-spacing: 2px;
       }
@@ -135,8 +137,22 @@ header {
     transition: all 0.2s ease;
   }
 
-  .color-toggle::before {
+  .color-toggle-label::before {
+    content: "🌚";
+    position: absolute;
+    bottom: 0.25rem;
+    left: 0.2rem;
+    z-index: 1000;
+    font-size: 0.9rem;
+  }
+
+  .color-toggle-label::after {
     content: "🌞";
+    position: absolute;
+    bottom: 0.25rem;
+    right: 0.2rem;
+    z-index: 1000;
+    font-size: 0.9rem;
   }
 
   #color-toggle-input {
@@ -156,7 +172,7 @@ header {
     transform: translate(-50%, -50%);
     h1,
     p {
-      color: #fff;
+      color: var(--text-color);
     }
     h1 {
       white-space: nowrap;
@@ -167,7 +183,7 @@ header {
       }
     }
     p {
-      color: rgb(219, 219, 219);
+      color: var(--lighter-text);
       line-height: 1.6;
       font-size: calc(14px + 0.5vw);
       text-align: center;
@@ -190,11 +206,12 @@ header {
         letter-spacing: 1px;
       }
       .about {
-        color: #fff;
+        color: var(--text-color);
         border: 2px solid var(--red);
       }
       .about:hover {
         background: var(--red);
+        color: #fff;
       }
       .projects-btn {
         color: #fff;
@@ -372,7 +389,7 @@ header {
         color: var(--red);
       }
       h3 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         color: var(--text-color);
         padding-bottom: 1rem;
       }
@@ -864,7 +881,7 @@ header {
 }
 
 .toggle .line1 {
-  transform: rotate(-45deg) translate(-5px, 5px);
+  transform: rotate(-45deg) translate(-5px, 6px);
 }
 
 .toggle .line2 {
@@ -872,7 +889,7 @@ header {
 }
 
 .toggle .line3 {
-  transform: rotate(45deg) translate(-5px, -5px);
+  transform: rotate(45deg) translate(-5px, -6px);
 }
 
 @keyframes linkFade {
