added mini message board project

--- a/css/main.scss
+++ b/css/main.scss
@@ -525,6 +525,9 @@ header {
     .card9 {
       background: url(../images/library.png) center;
     }
+    .card10 {
+      background: url(../images/messageboard.png) center;
+    }
   }
 }
 
