--- a/css/main.css
+++ b/css/main.css
@@ -653,6 +653,10 @@ header .socials ul li a:hover {
   background: url(../images/library.png) center;
 }
 
+#projects .container .card10 {
+  background: url(../images/messageboard.png) center;
+}
+
 .reveal {
   position: relative;
   -webkit-transform: translateY(5rem);
