--- a/css/main.css
+++ b/css/main.css
@@ -237,8 +237,8 @@ header .hero .hero-btns a {
   padding: 10px 32px;
   border-radius: 25px;
   font-size: 1rem;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
   font-weight: bold;
   letter-spacing: 1px;
 }
@@ -250,6 +250,8 @@ header .hero .hero-btns .about {
 
 header .hero .hero-btns .about:hover {
   background: var(--red);
+  -webkit-box-shadow: 0 0 0 5px #e44e5867;
+          box-shadow: 0 0 0 5px #e44e5867;
   color: #fff;
 }
 
@@ -672,22 +674,38 @@ header .socials ul li a:hover {
   opacity: 1;
 }
 
-#contact {
+#resume {
   background: var(--dark-gray);
-  padding: 1.5rem;
+  margin: 2.5rem 0 3rem 0;
   text-align: center;
 }
 
-#contact span,
-#contact .email {
-  color: var(--gray);
-  font-size: calc(1rem + 0.2vw);
-  text-decoration: none;
-  font-weight: bold;
+#resume h2 {
+  font-size: 1.8rem;
+  color: var(--red);
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 
-#contact span {
-  color: var(--red);
+#resume h2 span {
+  color: var(--text-color);
+}
+
+#resume .resume {
+  text-decoration: none;
+  color: var(--text-color);
+  border: 2px solid var(--red);
+  padding: 8px 26px;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  border-radius: 25px;
+}
+
+#resume .resume:hover {
+  background: var(--red);
+  color: white;
+  -webkit-box-shadow: 0 0 0 5px #e44e5867;
+          box-shadow: 0 0 0 5px #e44e5867;
 }
 
 #back-to-top {
@@ -835,6 +853,13 @@ header .socials ul li a:hover {
   #projects .container #card .card-buttons {
     font-size: 0.7rem;
   }
+  #resume h2 {
+    font-size: 1.5rem;
+  }
+  #resume .resume {
+    padding: 8 24px;
+    font-size: 0.8rem;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -893,7 +918,7 @@ header .socials ul li a:hover {
   }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   #nav {
     min-height: 8vh;
   }
@@ -932,41 +957,6 @@ header .socials ul li a:hover {
     font-size: 1rem;
     width: 2.5rem;
     height: 2.5rem;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  #about .container-about {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  #about .container-about .about-me {
-    width: 100%;
-  }
-  #about .container-about .about-me h2 {
-    width: 50%;
-  }
-  #about .container-about .about-me h2::after {
-    width: 20%;
-  }
-  #about .container-about .about-me p {
-    width: 50%;
-  }
-  #about .container-about .student-img {
-    width: 100%;
-    padding: 0 0 5rem 0;
-  }
-  #about .container-about .student-img img {
-    width: 40%;
-    height: 40%;
-  }
-  #skills .header h2 {
-    width: 50%;
-  }
-  #projects .header h2 {
-    width: 50%;
   }
 }
 
