--- a/css/main.scss
+++ b/css/main.scss
@@ -201,7 +201,7 @@ header {
         padding: 10px 32px;
         border-radius: 25px;
         font-size: 1rem;
-        transition: 0.5s ease;
+        transition: 0.3s ease;
         font-weight: bold;
         letter-spacing: 1px;
       }
@@ -211,6 +211,7 @@ header {
       }
       .about:hover {
         background: var(--red);
+        box-shadow: 0 0 0 5px #e44e5867;
         color: #fff;
       }
       .projects-btn {
@@ -544,20 +545,32 @@ header {
   opacity: 1;
 }
 
-//////////////////////////////////////// CONTACT ME ////////////////////////////////////////
-#contact {
+//////////////////////////////////////// RESUME ////////////////////////////////////////
+#resume {
   background: var(--dark-gray);
-  padding: 1.5rem;
+  margin: 2.5rem 0 3rem 0;
   text-align: center;
-  span,
-  .email {
-    color: var(--gray);
-    font-size: calc(1rem + 0.2vw);
-    text-decoration: none;
-    font-weight: bold;
-  }
-  span {
+  h2 {
+    font-size: 1.8rem;
     color: var(--red);
+    padding: 1rem;
+    margin-bottom: 1rem;
+    span {
+      color: var(--text-color);
+    }
+  }
+  .resume {
+    text-decoration: none;
+    color: var(--text-color);
+    border: 2px solid var(--red);
+    padding: 8px 26px;
+    transition: 0.3s ease;
+    border-radius: 25px;
+  }
+  .resume:hover {
+    background: var(--red);
+    color: white;
+    box-shadow: 0 0 0 5px #e44e5867;
   }
 }
 
@@ -702,6 +715,15 @@ header {
       }
     }
   }
+  #resume {
+    h2 {
+      font-size: 1.5rem;
+    }
+    .resume {
+      padding: 8 24px;
+      font-size: 0.8rem;
+    }
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -785,7 +807,7 @@ header {
 }
 
 //////////////////////////////////////// MEDIUM-SIZED DEVICES ////////////////////////////////////////
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   #nav {
     min-height: 8vh;
   }
@@ -823,47 +845,47 @@ header {
 }
 
 //////////////////////////////////////// LARGE DEVICES ////////////////////////////////////////
-@media screen and (max-width: 1024px) {
-  #about .container-about {
-    flex-direction: column;
-    .about-me {
-      width: 100%;
-      h2 {
-        width: 50%;
-      }
-      h2::after {
-        width: 20%;
-      }
-      p {
-        width: 50%;
-      }
-    }
-    .student-img {
-      width: 100%;
-      padding: 0 0 5rem 0;
-      img {
-        width: 40%;
-        height: 40%;
-      }
-    }
-  }
+// @media screen and (max-width: 1024px) {
+//   #about .container-about {
+//     flex-direction: column;
+//     .about-me {
+//       width: 100%;
+//       h2 {
+//         width: 50%;
+//       }
+//       h2::after {
+//         width: 20%;
+//       }
+//       p {
+//         width: 50%;
+//       }
+//     }
+//     .student-img {
+//       width: 100%;
+//       padding: 0 0 5rem 0;
+//       img {
+//         width: 40%;
+//         height: 40%;
+//       }
+//     }
+//   }
 
-  #skills {
-    .header {
-      h2 {
-        width: 50%;
-      }
-    }
-  }
+//   #skills {
+//     .header {
+//       h2 {
+//         width: 50%;
+//       }
+//     }
+//   }
 
-  #projects {
-    .header {
-      h2 {
-        width: 50%;
-      }
-    }
-  }
-}
+//   #projects {
+//     .header {
+//       h2 {
+//         width: 50%;
+//       }
+//     }
+//   }
+// }
 
 //////////////////////////////////////// LARGER DEVICES ////////////////////////////////////////
 @media screen and (max-width: 1260px) {
