--- a/css/main.scss
+++ b/css/main.scss
@@ -528,6 +528,9 @@ header {
     .card10 {
       background: url(../images/messageboard.png) center;
     }
+    .card11 {
+      background: url(../images/messageboard.png) center;
+    }
   }
 }
 
