fixed image for inventory-application

--- a/css/main.css
+++ b/css/main.css
@@ -656,7 +656,7 @@ header .socials ul li a:hover {
 }
 
 #projects .container .card11 {
-  background: url(../images/messageboard.png) center;
+  background: url(../images/inventory-application.png) center;
 }
 
 .reveal {
