--- a/css/main.scss
+++ b/css/main.scss
@@ -529,7 +529,7 @@ header {
       background: url(../images/messageboard.png) center;
     }
     .card11 {
-      background: url(../images/messageboard.png) center;
+      background: url(../images/inventory-application.png) center;
     }
   }
 }
