added members-only image to project card

--- a/css/main.css
+++ b/css/main.css
@@ -668,7 +668,7 @@ header .socials ul li a:hover {
 }
 
 #projects .container .card12 {
-  background: url(../images/);
+  background: url(../images/members_only.png);
 }
 
 .reveal {
