--- a/css/main.scss
+++ b/css/main.scss
@@ -541,7 +541,7 @@ header {
     }
 
     .card12 {
-      background: url(../images/);
+      background: url(../images/members_only.png);
     }
   }
 }
